# freedom_fire

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  test_heuristics_3.py  test_process.py
alembic/: env.py
alembic/versions/: 001_initial_schema.py
app/: config.py  main.py
app/adapters/csv_loader/: __init__.py  loader.py  normalizer.py
app/adapters/geocoder/: google_maps_adapter.py  nominatim_adapter.py
app/adapters/llm/: openai_adapter.py
app/adapters/persistence/: database.py  models.py  repositories.py
app/application/ports/: analytics_repo.py  assignment_repo.py  geocoder_port.py  llm_port.py  manager_repo.py  office_repo.py  round_robin_repo.py  ticket_repo.py
app/application/use_cases/: analyze_ticket.py  process_ticket.py
app/domain/entities/: ai_analysis.py  assignment.py  manager.py  office.py  ticket.py
app/domain/policies/: __init__.py  office_selection.py  required_skills.py  round_robin.py
app/domain/value_objects/: enums.py  geo_point.py
app/infrastructure/api/: dependencies.py  routes_analytics.py  routes_assistant.py  routes_health.py  routes_processing.py  routes_tickets.py
app/tools/: seed_db.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AiAssistant.tsx  TicketTable.tsx  UploadTickets.tsx
frontend/src/lib/: api.ts
tests/: conftest.py
tests/unit/adapters/: test_csv_loader.py  test_geocoder.py  test_normalizer.py
tests/unit/application/: test_analyze_ticket.py  (+1 more)
(+8 files in other folders)
